Fixes responsive table overflow bug

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -92,7 +92,22 @@ code {
 
 table {
   border-collapse: separate;
+  table-layout: fixed;
 }
+
+@media (max-width: 1024px) {
+  table {
+    width: 100% !important;
+    overflow-x: auto;
+    display: block;
+  }
+  td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+  }
+}
+
 
 input:not([type]), input[type=text], input[type=search] {
   @apply py-1 px-2 text-white bg-brown-800;
